use Optional for ConflictInspector, and fix build